--- a/Max Life Insurance/test-output/old/Default suite/classes.html
+++ b/Max Life Insurance/test-output/old/Default suite/classes.html
@@ -4,11 +4,15 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>grv1.ClaimModule</td>
+<td>claims.ClaimModule</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>loginwithbackend</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>NaviagtetoClaim</td>
@@ -19,6 +23,10 @@
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>launchBrowser</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
