--- a/Max Life Insurance/test-output/old/Default suite/methods.html
+++ b/Max Life Insurance/test-output/old/Default suite/methods.html
@@ -1,8 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6bc464">  <td>17/05/15 18:37:35</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;InitBrowser.launchBrowser()[pri:0, instance:grv1.ClaimModule@39fb3ab6]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@710714889</td>   <td></td> </tr>
-<tr bgcolor="bd618c">  <td>17/05/15 18:37:36</td>   <td>1551</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ClaimModule.NaviagtetoClaim()[pri:0, instance:grv1.ClaimModule@39fb3ab6]">NaviagtetoClaim</td> 
-  <td>main@710714889</td>   <td></td> </tr>
+<tr bgcolor="837a77">  <td>17/05/25 15:12:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;InitBrowser.launchBrowser()[pri:0, instance:claims.ClaimModule@1810399e]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@226710952</td>   <td></td> </tr>
+<tr bgcolor="616ca2">  <td>17/05/25 15:12:58</td>   <td>5878</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ClaimModule.NaviagtetoClaim()[pri:0, instance:claims.ClaimModule@1810399e]">NaviagtetoClaim</td> 
+  <td>main@226710952</td>   <td></td> </tr>
+<tr bgcolor="837a77">  <td>17/05/25 15:14:49</td>   <td>116846</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;InitBrowser.launchBrowser()[pri:0, instance:claims.ClaimModule@1810399e]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@226710952</td>   <td></td> </tr>
+<tr bgcolor="616ca2">  <td>17/05/25 15:14:53</td>   <td>120850</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ClaimModule.loginwithbackend()[pri:0, instance:claims.ClaimModule@1810399e]">loginwithbackend</td> 
+  <td>main@226710952</td>   <td></td> </tr>
 </table>
