--- a/Max Life Insurance/test-output/old/Default suite/methods-alphabetical.html
+++ b/Max Life Insurance/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="616ca2">  <td>17/05/25 15:12:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ClaimModule.NaviagtetoClaim()[pri:0, instance:claims.ClaimModule@1810399e]">NaviagtetoClaim</td> 
-  <td>main@226710952</td>   <td></td> </tr>
-<tr bgcolor="837a77">  <td>17/05/25 15:12:52</td>   <td>-5878</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;InitBrowser.launchBrowser()[pri:0, instance:claims.ClaimModule@1810399e]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>main@226710952</td>   <td></td> </tr>
-<tr bgcolor="837a77">  <td>17/05/25 15:14:49</td>   <td>110968</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;InitBrowser.launchBrowser()[pri:0, instance:claims.ClaimModule@1810399e]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>main@226710952</td>   <td></td> </tr>
-<tr bgcolor="616ca2">  <td>17/05/25 15:14:53</td>   <td>114972</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ClaimModule.loginwithbackend()[pri:0, instance:claims.ClaimModule@1810399e]">loginwithbackend</td> 
-  <td>main@226710952</td>   <td></td> </tr>
+<tr bgcolor="616ca2">  <td>17/08/08 16:53:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Claim_Grv.NaviagtetoClaim()[pri:0, instance:claims.Claim_Grv@1810399e]">NaviagtetoClaim</td> 
+  <td>main@1379435698</td>   <td></td> </tr>
+<tr bgcolor="616ca2">  <td>17/08/08 16:57:46</td>   <td>258274</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Claim_Grv.grvlogin()[pri:2, instance:claims.Claim_Grv@1810399e]">grvlogin</td> 
+  <td>main@1379435698</td>   <td></td> </tr>
+<tr bgcolor="837a77">  <td>17/08/08 16:53:23</td>   <td>-5037</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;InitBrowser.launchBrowser()[pri:0, instance:claims.Claim_Grv@1810399e]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@1379435698</td>   <td></td> </tr>
+<tr bgcolor="837a77">  <td>17/08/08 16:55:52</td>   <td>144078</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;InitBrowser.launchBrowser()[pri:0, instance:claims.Claim_Grv@1810399e]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@1379435698</td>   <td></td> </tr>
+<tr bgcolor="837a77">  <td>17/08/08 16:57:43</td>   <td>255229</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;InitBrowser.launchBrowser()[pri:0, instance:claims.Claim_Grv@1810399e]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@1379435698</td>   <td></td> </tr>
+<tr bgcolor="616ca2">  <td>17/08/08 16:55:55</td>   <td>147193</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Claim_Grv.scrutinylogin()[pri:1, instance:claims.Claim_Grv@1810399e]">scrutinylogin</td> 
+  <td>main@1379435698</td>   <td></td> </tr>
 </table>
